# specmate

./: .gitignore  AGENTS.md  Cargo.toml  README.md  plan.md
docs/design-docs/candidate/: design-001-patch-02-parallel-safe-ids-and-structure.md  design-002-specmate-core.md  design-003-doc-model.md  design-004-check-engine.md  design-005-agent-loop.md  design-006-cli-surface-roadmap.md  design-007-move-command.md  design-008-status-command.md
docs/guidelines/: cli-conventions.md  specmate-principles.md
docs/specs/: org.md  project.md
specs/: project.md
specs/active/: task-0001-implement-init-command.md  task-0002-implement-check-command-surface.md  task-0003-implement-check-index-validations.md  task-0004-implement-check-boundaries.md  task-0005-implement-association-aware-transitions.md  task-0006-implement-move-command.md  task-0007-implement-status-command.md
specs/archived/: task-0001-implement-init-command.md  task-0002-implement-check-command-surface.md  task-0003-implement-check-index-validations.md  task-0004-implement-check-boundaries.md  task-0005-implement-association-aware-transitions.md  task-0006-implement-move-command.md  task-0007-implement-status-command.md
src/: config.rs  error.rs  lib.rs  main.rs
src/check/: git.rs  mod.rs
src/cmd/: check.rs  init.rs  mod.rs  move_.rs  new.rs  run.rs  status.rs
src/doc/: frontmatter.rs  id.rs  mod.rs  types.rs
src/template/en/: org.md  (+8 more)
tests/: doc_model_test.rs
tests/cmd/: check_boundaries_test.rs  check_cli_test.rs  check_index_test.rs  check_support.rs  init_test.rs  move_test.rs  status_test.rs
(+52 files in other folders)
