[package]
name = "specmate"
version = "0.1.0"
edition = "2021"
description = "CLI companion for document-driven AI coding"
license = "MIT"

[[bin]]
name = "specmate"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1"
thiserror = "1"
walkdir = "2"
glob = "0.3"
git2 = { version = "0.18", default-features = false }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
